fixed bug where the primary category would dissapear behind the logo inside the navbar on small screens

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2043,7 +2043,7 @@ ul.icons li .icon i:last-child {
 
 @media (max-width: 991px) {
      .gh-article.post {
-         top: min(4vh, 40px);
+         margin-top: min(20vw, 80px);
      }
 }
 
